--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ smartcar==5.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 gunicorn==21.2.0
-SQLAlchemy==2.0.23 
+SQLAlchemy==2.0.27
+psycopg2-binary==2.9.9 
