--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ Flask==2.3.3
 smartcar==5.0.0
 python-dotenv==1.0.0
 requests==2.31.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+Flask-SQLAlchemy==3.0.5
+PyJWT==2.8.0
+psycopg2-binary==2.9.7 
